# fem-cubed

./: LICENSE  PackagesList.cmake  README.md
FEM-Cubed/: CMakeLists.txt
FEM-Cubed/cmake/: Dependencies.cmake  FEM-Cubed_config.hpp.in
FEM-Cubed/example/: CMakeLists.txt
FEM-Cubed/example/ExoMultiMat/: CMakeLists.txt  main.cpp  solverMueLuRefMaxwell.xml
FEM-Cubed/example/ExodusMesh/: CMakeLists.txt  main.cpp
FEM-Cubed/example/LinearSolver/: CMakeLists.txt  main.cpp
FEM-Cubed/src/: CMakeLists.txt
FEM-Cubed/src/closures/: FEM3_BCStrategy_Dirichlet_AuxConstant.hpp  FEM3_BCStrategy_Dirichlet_AuxConstant_impl.hpp  FEM3_BCStrategy_Dirichlet_Constant.hpp  FEM3_BCStrategy_Dirichlet_Constant_impl.hpp  FEM3_BCStrategy_Factory.hpp  FEM3_ClosureModel_Factory.hpp  FEM3_ClosureModel_Factory_TemplateBuilder.hpp  FEM3_ClosureModel_Factory_impl.hpp  FEM3_Conductivity.hpp  FEM3_Conductivity_impl.hpp  FEM3_GaussianPulse.hpp  FEM3_GaussianPulse_impl.hpp  FEM3_InversePermeability.hpp  FEM3_InversePermeability_impl.hpp  FEM3_Permittivity.hpp  FEM3_Permittivity_impl.hpp
FEM-Cubed/src/eqn_sets/: FEM3_AuxiliaryEquationSet_CurlCurl.cpp  FEM3_AuxiliaryEquationSet_CurlCurl.hpp  FEM3_AuxiliaryEquationSet_CurlCurl_impl.hpp  FEM3_AuxiliaryEquationSet_MACROS.hpp  FEM3_AuxiliaryEquationSet_MassMatrix.cpp  FEM3_AuxiliaryEquationSet_MassMatrix.hpp  FEM3_AuxiliaryEquationSet_MassMatrix_impl.hpp  FEM3_AuxiliaryEquationSet_WeakGradient.cpp  FEM3_AuxiliaryEquationSet_WeakGradient.hpp  FEM3_AuxiliaryEquationSet_WeakGradient_impl.hpp  FEM3_EquationSetFactory.hpp  FEM3_EquationSet_Maxwell.hpp  (+3 more)
(+7 files in other folders)
